# gepeto

./: .env  .gitignore  README.md  example.env  pyproject.toml
files/: test.py  test_shedule_out.py  tlbot.py
files/brain/: chatgpt.py
files/database/: crud.py  database.db  main.py
files/logs/: main_06-09-Jun  main_06-11-Jun  main_06-12-Jun  main_06-22-Jun
files/old/: database.py  models.py
files/tools/: create_reminder.py  query_database.py  save_to_database.py
files/utils/: functions.py
files/working/: scheduled.py
gepeto/: chroma_test.py  chroma_test2.py  con_up.txt  recorded_messages.tx  recorded_messages.txt  reminder.py  test2.py  test_histories.py  test_shedule_out.py  testbot.py  tlbot.py
gepeto/brain/: chatgpt.py  functions.py
gepeto/chroma/: chroma-collections.parquet  chroma-embeddings.parquet
gepeto/chroma/index/: id_to_uuid_18a850dc-b3c9-477b-87c2-e8825199823e.pkl  id_to_uuid_882917ce-56f3-4a4f-a4d5-9e0315f6f51c.pkl  index_metadata_18a850dc-b3c9-477b-87c2-e8825199823e.pkl  index_metadata_882917ce-56f3-4a4f-a4d5-9e0315f6f51c.pkl  (+2 more)
gepeto/database/: chromaDB.py  database.db  models.py
gepeto/logs/: convo_history_07-12-Jul  convo_history_07-20-Jul  convo_history_07-21-Jul  convo_history_07-23-Jul  main_06-05  main_06-06  main_06-19-Jun  main_06-24-Jun  main_06-26-Jun  main_06-27-Jun  main_06-28-Jun  main_06-29-Jun  main_07-01-Jul  main_07-03-Jul  main_07-12-Jul  main_07-20-Jul  main_07-21-Jul  main_07-23-Jul
gepeto/tools/: create_agent.py  reminders.py
gepeto/utils/: functions.py
gepeto/working/: scheduled.py
(+38 files in other folders)
